force-app/main/default/objects/Status_Object__c/Status_Object__c.object-meta.xml
<CustomObject>
    <label>Status Object</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Status Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>