force-app/main/default/objects/Status_Object__c/fields/Accepted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Comment__c</fullName>
    <label>Accepted Comment</label>
    <type>TextArea</type>
</CustomField>