force-app/main/default/objects/Status_Object__c/fields/Reject_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reject_Comment__c</fullName>
    <label>Reject Comment</label>
    <type>TextArea</type>
</CustomField>