force-app/main/default/objects/Status_Object__c/validationRules/Accepted_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>and( ispickval(Status__c ,&apos;Accepted&apos;),
     ISBLANK(   Accepted_Comment__c   ))</errorConditionFormula>
    <errorDisplayField>Accepted_Comment__c</errorDisplayField>
    <errorMessage>Accepted Comment Mandatory.</errorMessage>
</ValidationRule>