force-app/main/default/objects/Status_Object__c/validationRules/Dont_Enter_Accepted_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Enter_Accepted_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>and( ispickval(Status__c ,&apos;Rejected&apos;),
     !ISBLANK(   Accepted_Comment__c  ))</errorConditionFormula>
    <errorDisplayField>Accepted_Comment__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>