force-app/main/default/objects/Status_Object__c/validationRules/Dont_Enter_Reject_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Enter_Reject_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>and( ispickval(Status__c ,&apos;Accepted&apos;),
     !ISBLANK(  Reject_Comment__c  ))</errorConditionFormula>
    <errorDisplayField>Reject_Comment__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>