force-app/main/default/objects/Status_Object__c/validationRules/Rejected_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>and( ispickval(Status__c ,&apos;Rejected&apos;),
      ISBLANK(  Reject_Comment__c ) )</errorConditionFormula>
    <errorDisplayField>Reject_Comment__c</errorDisplayField>
    <errorMessage>Rejected Comment Mandatory.</errorMessage>
</ValidationRule>